# leet

./: LICENSE  README.md  README.org
c/: c.c  reverse_string.c  test.c
haskell/: README.org  fizzbuzz.hs
python3/: reverse_string.py
rust/: Cargo.toml
rust/src/: generate_parantheses.rs  lib.rs  main.rs  permutations.rs  reverse_string  reverse_string.rs  runr  sum_of_square_nums.rs
rust/src/.easy/: maximum_number_of_words_you_can_type  maximum_number_of_words_you_can_type.rs  rotate_string.rs  sort_array_by_parity_2.rs
rust/src/easy/: README.org  check_if_the_sentence_is_pangram.rs  delete_columnds_to_make_sorted  delete_columnds_to_make_sorted.rs  first_bad_product.rs  remove_digit-from_number_to_maximize_result.rs  reverse_vowels_of_a_string.py  reverse_vowels_of_a_string.rs  rotate_string.py  rotate_string.rs  shift_2d_grid.rs  shortest_distance_to_a_character  shortest_distance_to_a_character.py  shortest_distance_to_a_character.rs  valid_parantheses.rs
rust/src/hard/: minimum_numbers_of_increments_on_subarrays_to_form_a_target_array  minimum_numbers_of_increments_on_subarrays_to_form_a_target_array.rs  preimage_size_of_factorial_zeroes_function.rs  shortest_path_to_get_all_keys.rs
rust/src/medium/: can_convert_string_in_k_moves.rs  koko_eating_bananas.rs  pow(x,n).rs  two_sum_2_input_array_is_sorted.rs  uncrossed_lines.rs  valid_sudoku.rs
