# I might add single files to compile with rustc, but for now, this is just a library

[package]
name = "leet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "sum_of_square_nums"
path = "src/sum_of_square_nums.rs"
